# cudaq-mlir-parser

./: .gitignore  BUILD_INSTRUCTIONS.md  LICENSE  MIGRATION_SUMMARY.md  PROJECT_SUMMARY.md  README.md  requirements.txt  setup.py  verify_installation.py
docs/: QUICK_REFERENCE.md  README_MLIR_PARSER.md
examples/: demo_tensor_manipulation.py  performance_comparison.py
src/: CMakeLists.txt  cudaq_mlir_parser.py  cudaq_to_torch_converter.py  formotensor_bridge.cpp  parameterized_quantum_circuit.py  quantum_gate_library.py
tests/: test_api_functions.py  test_complex_circuits.py
